fix: compléter le dijkstra et fixer des erreurs